<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.fragment.NavHostFragment">

<TextView
    android:id="@+id/btnVerifySignatureFunc"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:text="@string/verifySignature"
    app:layout_constraintBottom_toTopOf="@+id/guideline16"
    app:layout_constraintEnd_toEndOf="@+id/btnDispatchFunc"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/btnDispatchFunc"
    app:layout_constraintTop_toTopOf="@+id/guideline15"
    app:layout_constraintVertical_bias="0.0"
    app:drawableLeftCompat="@drawable/ic_verify_signature"
    app:drawableRightCompat="@drawable/ic_next" />

<TextView
    android:id="@+id/btnVehicleInformationFunc"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:text="@string/vehicleInformation"
    app:layout_constraintBottom_toTopOf="@+id/guideline17"
    app:layout_constraintEnd_toEndOf="@+id/btnVerifySignatureFunc"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/btnVerifySignatureFunc"
    app:layout_constraintTop_toTopOf="@+id/guideline16"
    app:layout_constraintVertical_bias="0.0"
    app:drawableLeftCompat="@drawable/ic_vehicle_info"
    app:drawableRightCompat="@drawable/ic_next" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline11"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.1" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline19"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.15" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline12"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.25" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline13"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.35" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline14"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.45" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline15"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.55" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline16"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.65" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline17"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.75" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/lightBlue"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvChoiceFunction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectFunctionTitle"
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

<TextView
    android:id="@+id/btnRegisterFunc"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="5dp"
    android:text="@string/notRegisterVehicleInspection"
    app:layout_constraintBottom_toTopOf="@+id/guideline12"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline19"
    app:drawableLeftCompat="@drawable/ic_register"
    app:drawableRightCompat="@drawable/ic_next" />

<TextView
    android:id="@+id/btnChargeFunc"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:text="@string/charge"
    app:layout_constraintBottom_toTopOf="@+id/guideline13"
    app:layout_constraintEnd_toEndOf="@+id/btnRegisterFunc"
    app:layout_constraintStart_toStartOf="@+id/btnRegisterFunc"
    app:layout_constraintTop_toTopOf="@+id/guideline12"
    app:drawableLeftCompat="@drawable/ic_cny"
    app:drawableRightCompat="@drawable/ic_next" />

<TextView
    android:id="@+id/btnVehicleInspectionFunc"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:text="@string/personInspectionItem"
    app:layout_constraintBottom_toTopOf="@+id/guideline14"
    app:layout_constraintEnd_toEndOf="@+id/btnChargeFunc"
    app:layout_constraintStart_toStartOf="@+id/btnChargeFunc"
    app:layout_constraintTop_toTopOf="@+id/guideline13"
    app:drawableLeftCompat="@drawable/ic_searcher"
    app:drawableRightCompat="@drawable/ic_next" />

<TextView
    android:id="@+id/btnDispatchFunc"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:text="@string/dispatch"
    app:layout_constraintBottom_toTopOf="@+id/guideline15"
    app:layout_constraintEnd_toEndOf="@+id/btnVehicleInspectionFunc"
    app:layout_constraintStart_toStartOf="@+id/btnVehicleInspectionFunc"
    app:layout_constraintTop_toTopOf="@+id/guideline14"
    app:drawableLeftCompat="@drawable/ic_dispatch"
    app:drawableRightCompat="@drawable/ic_next" />

</androidx.constraintlayout.widget.ConstraintLayout>